# fmpire

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fmpire.kdev4
.kdev4/: fmpire.kdev4
src/: DistrhoPluginInfo.h
src/common/: FftRealPair.cpp  defines.h  enum_ops.h  utils.cpp  utils.h  waveform.cpp  waveform.h  waveform_part.cpp  waveform_part.h  wavetable.cpp  wavetable.h  wavetable_creator.cpp  wavetable_creator.h
src/dsp/: fmpire.cpp  fmpire.h  fmpire.hpp  fx_chain.cpp  fx_chain.h  modulator.cpp  modulator.h  oscillator.cpp  oscillator.h  voice.cpp  voice.h
src/ui/: double_click.cpp  fmpire_ui.cpp  fmpire_ui.h  state_manager.cpp  state_manager.h
src/ui/widgets/: arc.cpp  arc.h  aspect_ratio_container.cpp  aspect_ratio_container.h  border.cpp  border.h  button.cpp  button.h  double_click.cpp  double_click.h  draw_operations.cpp  draw_operations.h  fmpire_border.cpp  fmpire_border.h  fmpire_grid_container.cpp  fmpire_grid_container.h  fmpire_knob.cpp  fmpire_knob.h  fmpire_theme.cpp  fmpire_theme.h  fmpire_widget.cpp  fmpire_widget.h  fmpire_window.cpp  fmpire_window.h  grid_container.cpp  grid_container.h  image_button.cpp  image_button.h  int_editor.cpp  int_editor.h  knob.cpp  knob.h  label.cpp  label.h  oscillator_bar.cpp  oscillator_bar.h  oscillator_settings.cpp  oscillator_settings.h  relative_container.cpp  relative_container.h  (+14 more)
